Random fixes + cool features

--- a/explainnlp.html
+++ b/explainnlp.html
@@ -95,7 +95,7 @@
                                         Explainable NLP involves having the NLP system give justifications for its
                                         predictions. Current models for explainable NLP focus on justifying by
                                         interpreting the inputs and making connections between the inputs and
-                                        outputs
+                                        outputs.
                                     </p>
                                     <hr>
                                 </div>
@@ -140,11 +140,11 @@
                     <p class="info">
                         Note that an NLP algorithm would give a significantly less accurate response to the second
                         paragraph, than the first. Here it would be useful information to see the ‘thought’ process
-                        behind the NLP algorithm and see what the algorithm has learned from the text
+                        behind the NLP algorithm and see what the algorithm has learned from the text.
                         <br><br>
                         Adapted from: <a
                             href="https://thegradient.pub/frontiers-of-generalization-in-natural-language-processing/"
-                            class="piyaLink">https://thegradient.pub/frontiers-of-generalization-in-natural-language-processing/</a>.
+                            class="piyaLink">https://thegradient.pub/frontiers-of-generalization-in-natural-language-processing/</a>
                     </p>
                 </div>
                 <br>
@@ -156,12 +156,12 @@
                     the current deep learning algorithms that use reinforced learning to generate new rules that were
                     not
                     specified within the original specification, it is not necessarily possible to extract the knowledge
-                    the algorithm has learned
+                    the algorithm has learned.
                     <br><br>
                     It is even predicted that in the future that the algorithms can write their own rules that may not
                     necessarily be clear to humans. This leads onto exciting new insights into how language is formed
                     and
-                    different interpretations are made by the addition of more text or the change of syntax
+                    different interpretations are made by the addition of more text or the change of syntax.
                 </p>
                 <br>
                 <hr>
@@ -188,7 +188,7 @@
                     </div>
                     <div class="col-sm-2 ourPics">
                         <img class="img-fluid rounded-circle us" src="Content/Images/fhb.jpg" alt="">
-                        <p class="names">KEIGO</p>
+                        <p class="names">KEIGO TSUKUI</p>
                     </div>
                     <div class="col-sm-1"></div>
                 </div>
