--- a/wordembeddings.html
+++ b/wordembeddings.html
@@ -234,7 +234,7 @@
                     </div>
                     <div class="col-sm-2 ourPics">
                         <img class="img-fluid rounded-circle us" src="Content/Images/fhb.jpg" alt="">
-                        <p class="names">KEIGO</p>
+                        <p class="names">KEIGO TSUKUI</p>
                     </div>
                     <div class="col-sm-1"></div>
                 </div>
