--- a/index.html
+++ b/index.html
@@ -73,24 +73,28 @@
                             <a class="portfolio-box" href="nlp.html">
                                 <img class="img-fluid menuPics" src="Content/Tiles/nlp.png"
                                      alt="Natural Language Processing"/>
+                                  <p class="menuAppears">1</p>
                             </a>
                         </div>
                         <div class="col-lg-6 col-sm-6 menuHolders">
                             <a class="portfolio-box" href="explainnlp.html">
                                 <img class="img-fluid menuPics" src="Content/Tiles/explaiNlp.png"
                                      alt="Natural Language Processing"/>
+                                  <p class="menuAppears">3</p>
                             </a>
                         </div>
                         <div class="col-lg-6 col-sm-6 menuHolders">
                             <a class="portfolio-box" href="wordembeddings.html">
                                 <img class="img-fluid menuPics" src="Content/Tiles/wordEmbed.png"
                                      alt="Natural Language Processing"/>
+                                  <p class="menuAppears">2</p>
                             </a>
                         </div>
                         <div class="col-lg-6 col-sm-6 menuHolders">
                             <a class="portfolio-box" href="interpwordembeddings.html">
                                 <img class="img-fluid menuPics" src="Content/Tiles/interpretWordEmbed.png"
                                      alt="Natural Language Processing"/>
+                                  <p class="menuAppears">4</p>
                             </a>
                         </div>
                     </div>
@@ -154,7 +158,7 @@
                     </div>
                     <div class="col-sm-2 ourPics">
                         <img class="img-fluid rounded-circle us" src="Content/Images/fhb.jpg" alt="">
-                        <p class="names">KEIGO</p>
+                        <p class="names">KEIGO TSUKUI</p>
                     </div>
                     <div class="col-sm-1"></div>
                 </div>
@@ -198,11 +202,15 @@
     $(".menuPics").mouseenter(function () {
         $(".menuPics").stop(true);
         $(".menuPics").animate({"opacity" : "0.7"}, 150);
+        $(".menuAppears").stop(true);
+        $(".menuAppears").animate({"opacity" : "1"}, 300);
         $(this).animate({"opacity" : "1"}, 150);
 
     })
+
     $(".menuPics").mouseleave(function () {
         $(".menuPics").animate({"opacity" : "1"}, 300);
+        $(".menuAppears").animate({"opacity" : "0"}, 300);
     })
 
     $(".menuHolders").mouseenter(function () {
