Fixed the bug for the NLP table, WHO THE FK USES CAPITAL .PNG SUFFIX

--- a/nlp.html
+++ b/nlp.html
@@ -162,15 +162,15 @@
                                          aria-labelledby="nav-home-tab">
                                         <div class="row">
                                             <div class="col-sm-4">
-                                                <img class="img-fluid" src="Content/Images/SpamDetection.PNG"
+                                                <img class="img-fluid" src="Content/Images/SpamDetection.png"
                                                      alt="Spam Detection"/>
                                             </div>
                                             <div class="col-sm-4">
-                                                <img class="img-fluid" src="Content/Images/POS.PNG"
+                                                <img class="img-fluid" src="Content/Images/POS.png"
                                                      alt="POS"/>
                                             </div>
                                             <div class="col-sm-4">
-                                                <img class="img-fluid" src="Content/Images/NameEntity.PNG"
+                                                <img class="img-fluid" src="Content/Images/NameEntity.png"
                                                      alt="Name Entity"/>
                                             </div>
                                         </div>
