--- a/nlp.html
+++ b/nlp.html
@@ -93,12 +93,9 @@
                                 <div class="col-sm-12">
                                     <hr>
                                     <p class="summary">
-                                        So what is NLP? Natural Language Proccessing! It mainly involves the
+                                        So what is NLP? Natural Language Processing! It mainly involves the
                                         construction of computational algorithms that can process and represent human
-                                        language. A more recent and well known use is Amazon’s voice assistant Alexa.So
-                                        what is NLP? Natural Language Proccessing! It mainly involves the construction
-                                        of computational algorithms that can process and represent human language. A
-                                        more recent and well known use is Amazon’s voice assistant Alexa.
+                                        language. A more recent and well known use is Amazon’s voice assistant Alexa.
                                     </p>
                                     <hr>
                                 </div>
@@ -110,19 +107,19 @@
                 <hr>
                 <h3 class="subheading"><b>A Brief History of NLP</b></h3><br>
                 <p class="info" id="researchParagraph">
-                    Arguably first major advancment was the birth of Collosus, the computer created by Sir Alan Turing.
+                    Arguably first major advancement was the birth of Colossus, the computer created by Sir Alan Turing.
                     This machine was designed to crack the messages encoded by the German Enigma machine. It was with
-                    the threat of nuclear war after WWII that NLP developped further. This involved the creation of
-                    automated translation of Russian test to english.
+                    the threat of nuclear war after WWII that NLP developed further. This involved the creation of
+                    automated translation of Russian test to English.
                     <br><br>
 
                     The early methods during the 1950s involved using language rules, computational linguistics and
-                    statistics. Coming towards the end of the 20th century, methods developped to Corpus based
-                    statistics. This method looked at using statictics including normalised frequency and type-token
+                    statistics. Coming towards the end of the 20th century, methods developed to Corpus based
+                    statistics. This method looked at using statistics including normalised frequency and type-token
                     ratio. A token is an instance of a wordform in the text. By examining the ratio of the number of
                     types of token by the total number of tokens gives a measure of the range of vocabulary used in the
                     text. These statistics were then used in significance tests with adjacent words and collections to
-                    see a particular words had similar statistcs in a different reference text. Depending on the
+                    see particular words had similar statistics in a different reference text. Depending on the
                     significance of the result, a keyword could then be extracted.
                     <br><br>
 
@@ -134,7 +131,7 @@
                 <p class="info">
                     What is not more commonly understood by NLP, is that the subject also involves processing Speech and
                     other forms of language, for example processing sign language, and even outputting language having
-                    interpretted speech. More technically, NLP systems understand Natural Language, execute requested
+                    interpreted speech. More technically, NLP systems understand Natural Language, execute requested
                     tasks and produce Natural Language.
                 </p>
                 <br>
