No errors in validation

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -62,7 +62,8 @@
     </div>
     <div class="panes">
         <div class="leftpane">
-            <h1></h1></div>
+          <h1></h1>
+        </div>
         <div class="middlepane">
             <div id="sectionMenuHolder">
               <hr>
@@ -114,7 +115,6 @@
                     This requires the use of interpretable word embeddings which are special forms of web embeddings that allow transparency of normal word embeddings by attaching context to the words such as grammar and use cases.
                     In the other pages, these subtopics are further explored and explained.
                   </p>
-                </p>
                 </div>
               </div>
             <hr>
@@ -167,13 +167,13 @@
             <div id="bottomBar">
                 <div class="imgHolder">
                     <a href="https://www.doc.ic.ac.uk/~pl1515/">
-                        <img class="img-responsive" src="ICLpic.png" align="middle" id="iclLogo">
+                        <img class="img-responsive" src="ICLpic.png" alt="Imperial College Logo" id="iclLogo">
                     </a>
                 </div>
             </div>
         </div>
         <div class="rightpane">
-            <h1></h1>
+          <h1></h1>
         </div>
     </div>
 </div>
