--- a/nlp.html
+++ b/nlp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -68,19 +68,19 @@
         <div class="middlepane">
             <div class="progressBar">
               <a href="nlp.html">
-                <img src="Content/Tiles/nlp.png" class="highlightImage currentPageProgressBar" id="nlp"/>
+                <img src="Content/Tiles/nlp.png" class="highlightImage currentPageProgressBar" alt="Natural Language Processing" id="nlp"/>
               </a>
-              <img src="Content/Images/arrow.png" class="highlightImage arrow"/>
+              <img src="Content/Images/arrow.png" class="highlightImage arrow" alt="Arrow"/>
               <a href="wordembeddings.html">
-                <img src="Content/Tiles/wordEmbed.png" class="highlightImage progressImgs" id="wordEmbed"/>
+                <img src="Content/Tiles/wordEmbed.png" class="highlightImage progressImgs" alt="Word Embeddings" id="wordEmbed"/>
               </a>
-              <img src="Content/Images/arrow.png" class="highlightImage arrow"/>
+              <img src="Content/Images/arrow.png" class="highlightImage arrow" alt="Arrow"/>
               <a href="explainnlp.html">
-                <img src="Content/Tiles/explaiNlp.png" class="highlightImage progressImgs" id="explaiNlp"/>
+                <img src="Content/Tiles/explaiNlp.png" class="highlightImage progressImgs" alt="Explainable NLP" id="explaiNlp"/>
               </a>
-              <img src="Content/Images/arrow.png" class="highlightImage arrow"/>
+              <img src="Content/Images/arrow.png" class="highlightImage arrow" alt="Arrow"/>
               <a href="interpwordembeddings.html">
-                <img src="Content/Tiles/interpretWordEmbed.png" class="highlightImage progressImgs" id="interpretWordEmbed"/>
+                <img src="Content/Tiles/interpretWordEmbed.png" class="highlightImage progressImgs" alt="Interpretable Word Embeddings" id="interpretWordEmbed"/>
               </a>
             </div>
             <div id="mainText">
@@ -248,7 +248,7 @@
             <div id="bottomBar">
                 <div class="imgHolder">
                     <a href="https://www.doc.ic.ac.uk/~pl1515/">
-                        <img class="img-responsive" src="ICLpic.png" align="middle" id="iclLogo">
+                        <img class="img-responsive" src="ICLpic.png" alt="Imperial College Logo" id="iclLogo">
                     </a>
                 </div>
             </div>
