Fixed the list in IWE

--- a/interpwordembeddings.html
+++ b/interpwordembeddings.html
@@ -108,12 +108,10 @@
           This should also be interpretable.
           <br><br>
           For word embeddings to be interpretable:</p>
-          <ul>
-            <li>It needs to be sparse</li>
-            <li>Have few large values in a row or column</li>
-            <li>Values are non-negative</li>
-          </ul>
-          <p><br>
+            <h6><b>It needs to be sparse<br>
+            Have few large values in a row or column<br>
+            Values are non-negative</b></h6>
+          <br>
           Currently the constructions of interpretable word embeddings are split into two methods:</p>
         </div>
         <div class="container-fluid">
