Added that single <p>

--- a/interpwordembeddings.html
+++ b/interpwordembeddings.html
@@ -107,12 +107,15 @@
           The embeddings should have a reasonable size so the calculations on these matrices would not be too taxing but still be very expressive in representing the contexts of the words.
           This should also be interpretable.
           <br><br>
-          For word embeddings to be interpretable:</p>
-            <h6><b>It needs to be sparse<br>
+          For word embeddings to be interpretable:
+          </p>
+          <h6>
+            <b>It needs to be sparse<br>
             Have few large values in a row or column<br>
-            Values are non-negative</b></h6>
+            Values are non-negative</b>
+          </h6>
           <br>
-          Currently the constructions of interpretable word embeddings are split into two methods:</p>
+          <p>Currently the constructions of interpretable word embeddings are split into two methods:</p>
         </div>
         <div class="container-fluid">
             <div class="row">
